# hsm-cpp

./: .gitmodules  .remarkrc.json  CMakeLists.txt  CTHSM_O1_DEFERRED.md  README.md  WHY_RUNTIME_STRUCTURES.md  benchmark_deferred_lookup  comparison_benchmark  cthsm_benchmark_results.csv  cthsm_benchmark_results.json  cthsm_o1_defer_patch.hpp  cthsm_readme.md  cthsm_variant_analysis.cpp  example_state_hash  example_state_hash.cpp  hsm_benchmark_results.csv  hsm_benchmark_results.json  test_cthsm_advanced.cpp  test_cthsm_state_clean.cpp  test_cthsm_working.cpp  test_fixed_size_deferred.cpp  test_hash_debug  test_hash_debug.cpp  test_state_comparison_simple  test_state_comparison_simple.cpp  test_state_hash.cpp
.cursor/plans/: typed-82ceb430.plan.md
cpp/: .gitignore  CMakeLists.txt  CTHSM_FEATURE_PARITY.md  CTHSM_STABLE.md  README.md  VARIANT_VS_RUNTIME.md  benchmark_deferred_lookup.cpp  build_and_test_cthsm.sh  cthsm_bitset_patch.hpp  cthsm_variant_analysis  debug_hierarchy.cpp  debug_state_hash  debug_state_hash.cpp  docker-install.sh  example_clean_state.cpp  example_cthsm_final  example_cthsm_final.cpp  implementation_progress.md  test_cthsm_names.cpp  test_cthsm_o1_deferred  test_cthsm_o1_deferred.cpp  test_cthsm_o1_demo  test_cthsm_o1_demo.cpp  test_cthsm_simple  test_cthsm_simple.cpp  test_cthsm_state.cpp  test_cthsm_state_v2.cpp  test_cthsm_transition_map.cpp  test_cthsm_working  test_deferred_performance.cpp  test_state_constants.cpp  test_state_hash
cpp/examples/: benchmark.cpp  comparison_test.cpp  cthsm_example.cpp  optimized_performance_test.cpp  time_based_test.cpp
cpp/include/: cthsm.hpp  cthsm_final.hpp  kind.hpp  path.hpp
cpp/tests/: composite_initial_test.cpp  entry_test.cpp  event_deferral_test.cpp  final_states_test.cpp  model_building_test.cpp  path_resolution_test.cpp  path_test.cpp  test_cthsm_execution.cpp  test_hsm_vs_cthsm.cpp  transition_map_test.cpp
docs/: cthsm.design.md  cthsm.md  cthsm_freertos.md  cthsm_summary.md
docs/steps/: 01_project_scaffolding_and_build_integration.step.md  02_meta_model_and_compile_time_strings.step.md  03_define_and_model_normalization.step.md  04_compile_class_and_dispatch_core.step.md  05_behaviors_timers_and_deferral.step.md  06_test_parity_and_size_speed_comparison.step.md
examples/: CMakeLists.txt  benchmark.cpp  comparison_benchmark.cpp  comparison_test.cpp  cthsm_example  cthsm_example.cpp  light_benchmark.cpp  optimized_performance_test.cpp  performance_test.cpp  repro_nttp  time_based_test.cpp  variadic_entry_example.cpp  verification_benchmark.cpp
include/: hsm.hpp
include/cthsm/: cthsm.hpp
include/cthsm/detail/: behaviors.hpp  expressions.hpp  fixed_string.hpp  meta_model.hpp  normalize.hpp  path.hpp  structural_tuple.hpp  tables.hpp  type_list.hpp
tests/: CMakeLists.txt  activity_test.cpp  choice_states_test.cpp  cthsm_behavior_test.cpp  cthsm_benchmark.cpp  cthsm_choice_test.cpp  cthsm_clock_test.cpp  cthsm_completion_test.cpp  cthsm_composite_initial_test.cpp  cthsm_defer_queue_test.cpp  cthsm_deferral_test.cpp  cthsm_depth_test.cpp  cthsm_dispatch_test  cthsm_dispatch_test.cpp  cthsm_final_test.cpp  cthsm_meta_model_test.cpp  cthsm_new_features_test.cpp  cthsm_path_test.cpp  cthsm_smoke_test.cpp  cthsm_syntax_test.cpp  cthsm_test.cpp  cthsm_timer_test.cpp  cthsm_typed_event_test.cpp  deferred_map_test.cpp  exit_test.cpp  guard_conditions_test.cpp  initial_transitions_test.cpp  kind_test.cpp  simple_deferral_test.cpp  simple_timer_test.cpp  test_execution.cpp  timer_transitions_test.cpp  transition_test.cpp  transition_test.cpp.bak
